# orka

./: .coverage  .gitignore  LICENCE.md  README.md  coverage.xml  ecample.yml  example.yml  example2.yml  example_valid.yml  pyproject.toml  requirements.txt  setup.py  test_orka_sdk.py  test_run.py
.github/workflows/: tests.yml
docs/: CNAME  OrKa_UI_Getting_Started_With_Images.md  agents-advanced.md  agents.md  architecture.md  extending-agents.md  faq.md  getting-started.md  index.html  index.md  observability.md  orka.yaml-schema.md  runtime-modes.md  security.md
examples/base/: example.yml
orka/: __init__.py  engine.py  loader.py  memory_logger.py  orchestrator.py  orchestrator_v1.py  orka_cli.py  redis_interface.py
orka/agents/: __init__  __init__.py  agent_base.py  agents.py  google_duck_agents.py  llm_agents.py  router_agent.py
test/: test_orka_agent_base.py  test_orka_loader.py  test_orka_memoty_logger.py  test_orka_orchestrator.py  test_orka_sdk.py
