[project]
name = "orka"
version = "0.0.1"
description = "Modular agent orchestrator for reasoning pipelines"
authors = [{ name="Marco Somma", email="your@email.com" }]
dependencies = [
    "python-dotenv",
    "redis",
    "pyyaml",
    "openai",          # if you're using OpenAI
    "duckduckgo-search", # if you're using DDG search
]

[project.optional-dependencies]
dev = ["pytest", "coverage"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
